syntax = "proto3";

option go_package = "github.com/uglyer/ha-sqlite/proto";

service DB {
  rpc Open(OpenRequest) returns (OpenResponse) {}
  rpc Exec(ExecRequest) returns (ExecResponse) {}
  rpc Query(QueryRequest) returns (QueryResponse) {}
}

message Parameter {
  oneof value {
    sint64 i = 1;
    double d = 2;
    bool b = 3;
    bytes y = 4;
    string s = 5;
  }
  string name = 6;
}

message Statement {
  string sql = 1;
  repeated Parameter parameters = 2;
}

message Request {
  uint64 db_id = 1;
  uint64 transaction_token = 2;
  repeated Statement statements = 3;
}

message OpenRequest {
  string dsn = 1;
}

message OpenResponse {
  uint64 dbId = 1;
}

message ExecRequest {
  Request request = 1;
  bool timings = 2;
}

message ExecResponse {
  int64 last_insert_id = 1;
  int64 rows_affected = 2;
  string error = 3;
  double time = 4;
}

message QueryRequest {
  Request request = 1;
  bool timings = 2;
}

message QueryResponse {
  repeated string columns = 1;
  repeated string types = 2;
  message Values {
    repeated Parameter parameters = 1;
  }
  repeated Values values = 3;
  string error = 4;
  double time = 5;
}
